# smb

./: .gitignore  .gitmodules  1-1_full-fpg.fm3  CMakeLists.txt  Pallsson_JonnyBoy11FFPG_TAS.fm2  build.ninja  lrlar.nes  pellsson-ann42.ips  pellsson-mwe.ips  smas-bizsock.lua  smb.asm  smb.asm.lst  smb1_fds.lst  smb2j.lst.txt
rc/: embeds.s  fragment_shader.fs  gameshader.fs
res/: res.s
res/areas/: concat.js
src/: _main.c  areas.c  game.c  game.h  gameengine.c  main copy.c  main.c  rng.c  soundengine.c  timers.c  titlescreen.c  utils.c
testing/: README.md
testing/animatedbackground/: Makefile  README.md  layout
testing/animatedbackground/chr/: nes_chr_encode.py  nes_chr_encode.sh  output.chr
testing/animatedbackground/src/: main.asm  smb.asm
testing/cointimer/: Makefile  README.md
testing/cointimer/src/: smb.asm
